--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
 
     // 持久化 Cookie
 //    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+
+    // 图片加载
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
