--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     //
 //    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
 //    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
+    implementation 'com.weigan:loopView:0.1.2'
 }
