--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".ui.activity.read.ReadActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"/>
+        <service android:name=".service.PlayService" />
         <service android:name="com.squareup.leakcanary.internal.HeapAnalyzerService"
             android:enabled="false"
             android:process=":leakcanary" />
